# docs/swagger.json
@@ -56,7 +56,7 @@
                                     "type": "object",
                                     "properties": {
                                         "result": {
-                                            "$ref": "#/definitions/models.User"
+                                            "$ref": "#/definitions/models.AccessToken"
                                         }
                                     }
                                 }
@@ -296,7 +296,7 @@
                 }
             }
         },
-        "/bid": {
+        "/bidder/add": {
             "post": {
                 "security": [
                     {
@@ -346,6 +346,98 @@
                                     "properties": {
                                         "result": {
                                             "$ref": "#/definitions/models.ProductBidder"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/app.Result"
+                        }
+                    }
+                }
+            }
+        },
+        "/bidder/list": {
+            "get": {
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ProductService"
+                ],
+                "summary": "Endpoint untuk mendapatkan list product bidder",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "ProductID",
+                        "name": "product_id",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Limit",
+                        "name": "limit",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Offset",
+                        "name": "offset",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Query",
+                        "name": "query",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "Filter",
+                        "name": "filter",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/app.Result"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "result": {
+                                            "allOf": [
+                                                {
+                                                    "$ref": "#/definitions/service.EntriesResult"
+                                                },
+                                                {
+                                                    "type": "object",
+                                                    "properties": {
+                                                        "entries": {
+                                                            "type": "array",
+                                                            "items": {
+                                                                "$ref": "#/definitions/models.ProductBidder"
+                                                            }
+                                                        }
+                                                    }
+                                                }
+                                            ]
                                         }
                                     }
                                 }
@@ -614,22 +706,7 @@
                                     "type": "object",
                                     "properties": {
                                         "result": {
-                                            "allOf": [
-                                                {
-                                                    "$ref": "#/definitions/service.EntriesResult"
-                                                },
-                                                {
-                                                    "type": "object",
-                                                    "properties": {
-                                                        "entries": {
-                                                            "type": "array",
-                                                            "items": {
-                                                                "$ref": "#/definitions/models.Product"
-                                                            }
-                                                        }
-                                                    }
-                                                }
-                                            ]
+                                            "$ref": "#/definitions/types.ProductDetail"
                                         }
                                     }
                                 }
@@ -1737,7 +1814,7 @@
                     "type": "integer"
                 },
                 "description": {
-                    "type": "string"
+                    "type": "object"
                 },
                 "result": {
                     "type": "object"
@@ -1881,6 +1958,10 @@
                 "product_id": {
                     "type": "integer"
                 },
+                "user": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.UserSimple"
+                },
                 "user_id": {
                     "type": "integer"
                 },
@@ -1954,6 +2035,10 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "owner": {
+                    "type": "object",
+                    "$ref": "#/definitions/models.UserSimple"
                 },
                 "owner_id": {
                     "type": "integer"
@@ -2042,6 +2127,23 @@
                 }
             }
         },
+        "models.UserSimple": {
+            "type": "object",
+            "properties": {
+                "address": {
+                    "type": "string"
+                },
+                "avatar": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "service.EntriesResult": {
             "type": "object",
             "properties": {
@@ -2120,6 +2222,56 @@
                 },
                 "start_price": {
                     "type": "number"
+                }
+            }
+        },
+        "types.ProductDetail": {
+            "type": "object",
+            "properties": {
+                "bid_multpl": {
+                    "type": "number"
+                },
+                "bid_status": {
+                    "type": "object"
+                },
+                "closed": {
+                    "type": "boolean"
+                },
+                "closed_at": {
+                    "type": "string"
+                },
+                "condition": {
+                    "type": "integer"
+                },
+                "condition_avg": {
+                    "type": "number"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "desc": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "labels": {
+                    "type": "object"
+                },
+                "product_images": {
+                    "type": "object"
+                },
+                "product_name": {
+                    "type": "string"
+                },
+                "sold": {
+                    "type": "boolean"
+                },
+                "start_price": {
+                    "type": "number"
+                },
+                "store": {
+                    "type": "object"
                 }
             }
         }
